--- a/druid/Cargo.toml
+++ b/druid/Cargo.toml
@@ -26,7 +26,7 @@ image = ["druid-shell/image"]
 svg = ["usvg", "harfbuzz-sys"]
 x11 = ["druid-shell/x11"]
 crochet = []
-serde = ["im/serde"]
+serde = ["im/serde", "druid-shell/serde"]
 
 # passing on all the image features. AVIF is not supported because it does not
 # support decoding, and that's all we use `Image` for.
